Add random dog image support
