# source/api/api.yaml
@@ -163,6 +163,29 @@ paths:
                 type: string
                 example: Unable to Handle Request
 
+  /doggo:
+    summary: Random Dog Images
+    get:
+      operationId: get-dog-images
+      description: Fetch Dog Images
+      tags: [image]
+      responses:
+        '200':
+          description: Dog image retrieved successfully
+          content:
+            image/jpeg:
+              schema:
+                type: string
+                format: binary
+
+        '500':
+          description: server unavailable
+          content:
+            application/json:
+              schema:
+                type: string
+                example: Unable to Handle Request
+
   /health:
     summary: API health
     get:
