# source/routes/routes.ts
@@ -9,6 +9,7 @@ router.get('/steam/:id/summary', controller.steamSummary);
 router.get('/steam/:id/recently-played', controller.steamRecentlyPlayed)
 router.get('/catto', routers.dailyCatto)
 router.get('/steam/:id/summary/svg', controller.steamSummarySvg)
+router.get('/doggo', routers.dailyDoggo)
 
 router.get('/health', standardRoutes.health)
 router.get('/version', standardRoutes.version)
